2009-12-20  Dirk Bergstrom  <krid@otisbean.com>

    * app/assistants/categories-assistant.js (setup): Set initial focus to
    null.

    * app/models/ring.js (getItem): Remove encrypted stuff from item before
    passing it on.  Fixes incredibly stupid bug.
    (noteItemView): Only re-sort if currently sorting by viewed.  If so,
    set itemsReSorted, so the UI notices the change.

2009-12-19  Dirk Bergstrom  <krid@otisbean.com>

    * app/assistants/actions-assistant.js: Add button, dialog class and
    associated methods to support "change password".
    
    * app/assistants/app-assistant.js: Add "Edit Categories..." to app menu.
    
    * app/assistants/categories-assistant.js: Handle adding, deleting and
    editing categories.
    
    * app/assistants/item-assistant.js (init): Use lists of fields from ring to
    build this.fields.
    (setup): Use ring.emptyItem() when creating.  Add plumbing for
    "show empty fields", including command menu munging.  Add category support.
    Clean up field setup code.
    (timeoutOrDeactivate): Skip category.
    (handleCommand): Support "show empty fields".
    
    * app/assistants/item-list-assistant.js (init): Move global definitions here.
    (setup): Add category to command menu.  Declare fixedHeightItems in list.
    Save a reference to the list widget.  Set a status line.
    (handleCommand): Check password before changing sort order.  Support
    category menu.
    (sortPopupHandler, setSortingStatus): Keep track of sort order in the
    status line.
    (setCategory): Handle category menu actions.
    (filterItems): Make case-insensitive.
    (activate): Filter by category if necessary.
    
    * app/assistants/preferences-assistant.js (setup): Setup "hideEmpty" widget.
    
    * app/models/ring.js: Added JavaDoc-ish comments to every method.
    (onDeactivateOptions): Remove trailing comma.
    (DEFAULT_PREFS): Add category and hideEmpty.
    (categories, DEFAULT_CATEGORIES): Initial list of categories.