@@ -4,7 +4,7 @@
  </div>
  <div class="palm-dialog-separator"></div>
  <div class="textfield-group" x-mojo-focus-highlight="true">
-  <div class="title">
+  <div class="title" id="import-data-div">
    <div x-mojo-element="TextField" id="data"></div>
   </div>
  </div>
